<resources>
    <string name="app_name">Comic</string>
    <string name="loading">加载中...</string>
    <string name="loading_bottom">18才未満の方には販売しておりません</string>
    <string name="notice_title">服务器异常</string>
    <string name="notice_content_game">你所在的网络屏蔽了我们的游戏服务器\n我们会尽快切换服务器，服务器恢复后根据影响时长补偿您游戏道具\n对不起，影响了您的游戏体验，请耐心等待</string>
    <string name="notice_content_comic">你所在的网络屏蔽了我们的漫画服务器\n我们会尽快切换服务器，服务器恢复后根据影响时长补偿您漫画道具\n对不起，影响了您的漫画体验，请耐心等待</string>
    <string name="obtain_exclusive_rights_and_interests">获得专属权益</string>
    <string name="feeback_content">反馈内容将在一个工作日内审核处理\n申请退款会在3-5个工作日内原路返回\n请耐心等待…</string>
    <string name="toast_content_one_game">连接游戏服务器...</string>
    <string name="toast_content_one_comic">连接漫画服务器...</string>
    <string name="toast_content_two">服务器连接不上，切换备用服务器</string>
    <string name="toast_content_three_game">连接备用游戏服务器...</string>
    <string name="toast_content_three_comic">连接备用漫画服务器...</string>
    <string name="toast_content_four">备用服务器连接超时</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="mkz_about_address">地址:武汉市江岸区武汉天地写字楼中信泰富大厦7层</string>
    <string name="mkz_about_agreement">用户服务协议</string>
    <string name="mkz_about_copyright">Copyright ©2010-2017 小明太极 版权所有</string>
    <string name="mkz_about_dial_permission">拨打电话权限被禁止</string>
    <string name="mkz_about_divider">|</string>
    <string name="mkz_about_feature">正版·全面·高清</string>
    <string name="mkz_about_host">mkzhan.com</string>
    <string name="mkz_about_introduce">原创好看尽在漫客栈</string>
    <string name="mkz_about_legal_notice">法律声明</string>
    <string name="mkz_about_mail">邮箱:service@mkzhan.com</string>
    <string name="mkz_about_qq">QQ群：648199551</string>
    <string name="mkz_about_recommend">^_^主人，这有相关漫画为你推荐~</string>
    <string name="mkz_about_tel">电话:</string>
    <string name="mkz_about_tel_num">027-82881816</string>
    <string name="mkz_about_us">关于我们</string>
    <string name="mkz_about_us_title">关于我们</string>
    <string name="mkz_about_worktime">时间：工作日，周一到周五，10点到17点</string>
    <string name="mkz_account_buy_vip">去开通</string>
    <string name="mkz_account_charge">充值</string>
    <string name="mkz_account_charge_money">充值元宝</string>
    <string name="mkz_account_charge_vip">开通VIP</string>
    <string name="mkz_account_login_tip">登录查看您的账户信息，</string>
    <string name="mkz_account_month_ticket">月票</string>
    <string name="mkz_account_please_login">请登录</string>
    <string name="mkz_account_renew">去续费</string>
    <string name="mkz_account_tab_gold">元宝</string>
    <string name="mkz_account_tab_ticket">月票</string>
    <string name="mkz_account_tab_vip">VIP</string>
    <string name="mkz_account_tip">账号不能为空</string>
    <string name="mkz_account_title">我的账户</string>
    <string name="mkz_active_score">活跃值</string>
    <string name="mkz_activity">动态</string>
    <string name="mkz_add_collection">收藏</string>
    <string name="mkz_add_favorite_success">收藏成功，请在书架查看</string>
    <string name="mkz_add_month_ticket">投月票</string>
    <string name="mkz_all_msg_marked_read">消息已全部标记为已读</string>
    <string name="mkz_all_msg_read">全部已读</string>
    <string name="mkz_all_msg_unread">全部未读</string>
    <string name="mkz_ascension">上升最快</string>
    <string name="mkz_author_comic">TA的作品(%1$d)</string>
    <string name="mkz_back">返回</string>
    <string name="mkz_bookshelf_buy_count">已购买了%1$d个章节</string>
    <string name="mkz_bookshelf_cancel_auto_buy">取消自动购买</string>
    <string name="mkz_bookshelf_collection_chapter">%1$s</string>
    <string name="mkz_bookshelf_delete">取消</string>
    <string name="mkz_bookshelf_goto_rank">去「排行」看看</string>
    <string name="mkz_bookshelf_has_not_read">未看</string>
    <string name="mkz_bookshelf_has_read1">上次看到: %s话</string>
    <string name="mkz_bookshelf_has_read2">上次看到: %s</string>
    <string name="mkz_bookshelf_history_empty_tip">不妨去追一部漫画吧~</string>
    <string name="mkz_bookshelf_login_sync">登录同步收藏信息</string>
    <string name="mkz_bookshelf_login_to_sync_history">主人，登录后可同步阅读历史</string>
    <string name="mkz_bookshelf_manage">整理</string>
    <string name="mkz_bookshelf_pause_download">暂停</string>
    <string name="mkz_bookshelf_please_login">主人，请先登录</string>
    <string name="mkz_bookshelf_please_look_comic">主人，还没有看过一部漫画</string>
    <string name="mkz_bookshelf_read">阅读</string>
    <string name="mkz_bookshelf_restore_auto_buy">恢复自动购买</string>
    <string name="mkz_bookshelf_start_download">开始</string>
    <string name="mkz_bookshelf_tab_buy">订购</string>
    <string name="mkz_bookshelf_tab_cache">缓存</string>
    <string name="mkz_bookshelf_tab_favorite">收藏</string>
    <string name="mkz_bookshelf_tab_history">历史</string>
    <string name="mkz_bookshelf_undercarriage">作品已下架</string>
    <string name="mkz_bright">亮度</string>
    <string name="mkz_btn_donate_txt">打赏一波</string>
    <string name="mkz_buy">购买</string>
    <string name="mkz_buy_cache">购买缓存</string>
    <string name="mkz_buy_cache_tips">缓存章节中存在付费章节，请先进行购买</string>
    <string name="mkz_buy_chapter_tip">购买此章节需支付</string>
    <string name="mkz_buy_ticket_confirm">确定购买月票？</string>
    <string name="mkz_buy_vip_tip">开通VIP 惊喜多多</string>
    <string name="mkz_cache_begin">开始缓存</string>
    <string name="mkz_cache_buy">确认购买并开始缓存</string>
    <string name="mkz_cache_charge">元宝余额不足，去充值</string>
    <string name="mkz_cache_clear_dirty_hint">部分漫画章节因为版权和结构改变等原因被删除，请重新缓存</string>
    <string name="mkz_cache_cleared">已清空缓存</string>
    <string name="mkz_cache_complete">缓存完成</string>
    <string name="mkz_cache_deleting">删除中，请稍后…</string>
    <string name="mkz_cache_empty_tip">主人，还没有缓存过一部漫画</string>
    <string name="mkz_cache_failure">缓存失败</string>
    <string name="mkz_cache_in_loading">缓存章节添加中，请稍后…</string>
    <string name="mkz_cache_in_starting">全部开始中，请稍后…</string>
    <string name="mkz_cache_in_stopping">全部暂停中，请稍后…</string>
    <string name="mkz_cache_more">缓存更多话</string>
    <string name="mkz_cache_pay">支付</string>
    <string name="mkz_cache_pool_full">您已缓存较多内容，继续缓存会覆盖之前缓存的内容，请清除已阅读漫画</string>
    <string name="mkz_cache_quality">缓存画质</string>
    <string name="mkz_cache_remind">缓存提醒</string>
    <string name="mkz_cache_select">缓存所选</string>
    <string name="mkz_cache_select_all">全选</string>
    <string name="mkz_cache_setting">缓存设置</string>
    <string name="mkz_cache_starting">主人，正在为您缓存漫画章节~</string>
    <string name="mkz_cache_status_caching">缓存中：%1$d话</string>
    <string name="mkz_cache_status_failure">缓存暂停</string>
    <string name="mkz_cache_status_partial">已缓存：%1$d话</string>
    <string name="mkz_cache_status_pause">已暂停</string>
    <string name="mkz_cache_status_pending">待缓存</string>
    <string name="mkz_cache_status_waiting">等待中…</string>
    <string name="mkz_cache_success">缓存完成</string>
    <string name="mkz_cache_unselect_all">取消全选</string>
    <string name="mkz_cache_vip_privilege">VIP尊享-购买付费章节8折优惠</string>
    <string name="mkz_caching_comic">正在缓存%s</string>
    <string name="mkz_cancel">取消</string>
    <string name="mkz_cancel_auto_buy_success">取消自动购买成功</string>
    <string name="mkz_cancel_favorite_success">取消收藏成功</string>
    <string name="mkz_cancel_favorite_tip">亲，确定要取消收藏吗？</string>
    <string name="mkz_cancel_follow_tip">亲，您确定不再关注Ta吗？</string>
    <string name="mkz_capture_not_found">未找到存储卡，无法存储照片！</string>
    <string name="mkz_category_all">全部</string>
    <string name="mkz_category_end">完结</string>
    <string name="mkz_category_fee">付费</string>
    <string name="mkz_category_free">免费</string>
    <string name="mkz_category_hot">热门</string>
    <string name="mkz_category_latest">最新</string>
    <string name="mkz_category_serialize">连载</string>
    <string name="mkz_category_vip">VIP</string>
    <string name="mkz_chapter_cache_select">已选择%1$d话，占用%2$s</string>
    <string name="mkz_chapter_load_error">T T主人，章节加载失败了,请重新加载~</string>
    <string name="mkz_chapter_more">大人，更多话在这里</string>
    <string name="mkz_chapter_no_selection">没有选中话</string>
    <string name="mkz_chapter_shrink">点击收起</string>
    <string name="mkz_charge_login_hint">当前为游客，请登录后进行充值</string>
    <string name="mkz_charge_need_pay">需支付：</string>
    <string name="mkz_charge_success">客官，少量用户充值会出现延迟到账现象，请耐心等待一小会儿~</string>
    <string name="mkz_check_mobile_failure">验证失败</string>
    <string name="mkz_check_update">检查更新</string>
    <string name="mkz_check_update_failure">检查更新失败</string>
    <string name="mkz_checking_update">检查更新…</string>
    <string name="mkz_city_current">当前：</string>
    <string name="mkz_click_to_login">点击头像登录呦</string>
    <string name="mkz_collect_update_title">铃铃铃~主人</string>
    <string name="mkz_collection_num">（%1$s）</string>
    <string name="mkz_discount">优惠推荐</string>
    <string name="mkz_pay_confirm">确认支付</string>
    <string name="mkz_pay_method">支付方式</string>
    <string name="mkz_pay_wx">微信支付</string>
    <string name="mkz_pay_ali">支付宝支付</string>
    <string name="mkz_vip_privilege">VIP尊享特权</string>
    <string name="mkz_vip_privilege1">1、海量VIP漫画免费阅读</string>
    <string name="mkz_vip_privilege2">2、付费章节8折优惠</string>
    <string name="mkz_vip_privilege3">3、每月赠送客栈月票</string>
    <string name="mkz_vip_privilege_more">更多精彩特权，等你发现…</string>
</resources>