<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/design_navigation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80.0dip"
            android:layout_height="80.0dip"
            android:layout_marginTop="44.0dip"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6.0dip"
            android:text="@string/mkz_about_host"
            android:textColor="@color/mkz_black3"
            android:textSize="12.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.0dip"
            android:text="@string/mkz_about_introduce"
            android:textColor="@color/mkz_black1"
            android:textSize="16.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3.0dip"
            android:text="@string/mkz_about_feature"
            android:textColor="@color/mkz_black1"
            android:textSize="12.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60.0dip"
            android:text="@string/mkz_about_address"
            android:textColor="@color/mkz_black2"
            android:textSize="13.0sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mkz_about_tel"
                android:textColor="@color/mkz_black2"
                android:textSize="13.0sp" />

            <TextView
                android:id="@+id/tv_contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mkz_about_tel_num"
                android:textColor="@color/mkz_blue"
                android:textSize="13.0sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/mkz_about_worktime"
            android:textColor="@color/mkz_black2"
            android:textSize="13.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/mkz_about_mail"
            android:textColor="@color/mkz_black2"
            android:textSize="13.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/mkz_about_qq"
            android:textColor="@color/mkz_black2"
            android:textSize="13.0sp" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="42.0dip"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_register_agreement"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:text="@string/mkz_about_legal_notice"
                android:textColor="@color/mkz_blue"
                android:textSize="12.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/mkz_about_divider"
                android:textColor="@color/mkz_blue"
                android:textSize="12.0sp" />

            <TextView
                android:id="@+id/tv_agreement"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:text="@string/mkz_about_agreement"
                android:textColor="@color/mkz_blue"
                android:textSize="12.0sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12.0dip"
            android:text="@string/mkz_about_copyright"
            android:textColor="@color/mkz_black3"
            android:textSize="11.0sp" />

    </LinearLayout>
</LinearLayout>