<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/mkz_gray1"
    android:orientation="vertical">

    <include layout="@layout/design_navigation" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6.0dip"
                    android:layout_marginLeft="12.0dip"
                    android:layout_marginTop="12.0dip"
                    android:text="@string/mkz_discount"
                    android:textColor="@color/mkz_black3"
                    android:textSize="14.0sp" />
            </FrameLayout>

            <ListView
                android:id="@+id/vip_price_list"
                android:layout_width="fill_parent"
                android:layout_height="200.0dip"
                android:divider="@null"
                android:dividerHeight="0.0dip"
                android:listSelector="@android:color/transparent" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="4.0dip"
                android:background="@color/mkz_gray5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12.0dip"
                android:layout_marginTop="12.0dip"
                android:text="@string/mkz_pay_method"
                android:textColor="@color/mkz_black3"
                android:textSize="14.0sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/wechat_rl"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/paytype_height">

                    <ImageView
                        android:id="@+id/wechat_icon_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="12.0dip"
                        android:src="@drawable/wechat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="12.0dip"
                        android:layout_toRightOf="@+id/wechat_icon_iv"
                        android:text="@string/mkz_pay_wx"
                        android:textColor="@color/mkz_black1"
                        android:textSize="15.0sp" />


                    <ImageView
                        android:id="@+id/wechat_choose_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="12.0dip"
                        android:src="@drawable/pay_choose" />

                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:layout_marginLeft="12.0dip"
                    android:layout_marginRight="12.0dip"
                    android:background="@color/mkz_gray5" />

                <RelativeLayout
                    android:id="@+id/alipay_rl"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/paytype_height">

                    <ImageView
                        android:id="@+id/alipay_icon_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="12.0dip"
                        android:src="@drawable/alipay" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="12.0dip"
                        android:layout_toRightOf="@+id/alipay_icon_iv"
                        android:text="@string/mkz_pay_ali"
                        android:textColor="@color/mkz_black1"
                        android:textSize="15.0sp" />


                    <ImageView
                        android:id="@+id/alipay_choose_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="12.0dip"
                        android:src="@drawable/pay_no_choose" />

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="10.0dip"
                android:background="@color/mkz_gray5" />

            <TextView
                android:id="@+id/btn_pay"
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:layout_marginLeft="22.0dip"
                android:layout_marginRight="22.0dip"
                android:layout_marginTop="12.0dip"
                android:background="@drawable/mkz_bg_btn_pay_disable"
                android:gravity="center"
                android:text="@string/mkz_pay_confirm"
                android:textColor="@color/mkz_white"
                android:textSize="18.0sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="6.0dip"
                android:layout_marginTop="24.0dip"
                android:background="@color/mkz_gray5" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24.0dip"
                android:layout_marginLeft="12.0dip"
                android:layout_marginTop="12.0dip"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mkz_vip_privilege"
                    android:textColor="@color/mkz_black1"
                    android:textSize="15.0sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6.0dip"
                    android:text="@string/mkz_vip_privilege1"
                    android:textColor="@color/mkz_red"
                    android:textSize="13.0sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6.0dip"
                    android:text="@string/mkz_vip_privilege2"
                    android:textColor="@color/mkz_red"
                    android:textSize="13.0sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6.0dip"
                    android:text="@string/mkz_vip_privilege3"
                    android:textColor="@color/mkz_red"
                    android:textSize="13.0sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6.0dip"
                    android:text="@string/mkz_vip_privilege_more"
                    android:textColor="@color/mkz_gray4"
                    android:textSize="13.0sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
